Implement dynamic JSON-driven research trigger system with embedded triggers, NBT support, coordinate-based location triggers, and inventory-wide item checking