@@ -18,10 +18,11 @@ import com.bluelotuscoding.eidolonunchained.ai.AIDeityManager;
 import com.bluelotuscoding.eidolonunchained.ai.AIDeityConfig;
 import com.bluelotuscoding.eidolonunchained.ai.TaskSystemConfig;
 
-import java.util.Collection;
+import java.util.List;
+import java.util.Map;
 
 /**
- * Commands for managing the AI deity task system
+ * Command handlers for the deity task system
  */
 @Mod.EventBusSubscriber(modid = EidolonUnchained.MODID, bus = Mod.EventBusSubscriber.Bus.FORGE)
 public class TaskCommands {
@@ -30,36 +31,41 @@ public class TaskCommands {
     public static void registerCommands(RegisterCommandsEvent event) {
         CommandDispatcher<CommandSourceStack> dispatcher = event.getDispatcher();
         
-        dispatcher.register(Commands.literal("eidolon")
-            .then(Commands.literal("task")
-                .then(Commands.literal("assign")
-                    .requires(source -> source.hasPermission(2))
-                    .then(Commands.argument("player", EntityArgument.player())
-                        .then(Commands.argument("task_id", StringArgumentType.string())
-                            .then(Commands.argument("deity", StringArgumentType.string())
-                                .executes(TaskCommands::assignTask)))))
-                .then(Commands.literal("complete")
-                    .then(Commands.argument("task_id", StringArgumentType.string())
-                        .executes(TaskCommands::completeTask)))
-                .then(Commands.literal("list")
-                    .executes(TaskCommands::listTasks))
-                .then(Commands.literal("favor")
+        dispatcher.register(Commands.literal("dtask")
+            .then(Commands.literal("assign")
+                .then(Commands.argument("player", EntityArgument.player())
                     .then(Commands.argument("deity", StringArgumentType.string())
-                        .executes(TaskCommands::checkFavor))
-                    .executes(TaskCommands::checkAllFavor))));
-        
-        // Alternative command for AI deity task assignment
-        dispatcher.register(Commands.literal("assign_task")
-            .requires(source -> source.hasPermission(0)) // Allow anyone to use this
-            .then(Commands.argument("player", EntityArgument.player())
-                .then(Commands.argument("task_id", StringArgumentType.string())
-                    .executes(TaskCommands::assignTaskSimple))));
+                        .then(Commands.argument("taskId", StringArgumentType.string())
+                            .executes(TaskCommands::assignTask)))))
+            .then(Commands.literal("assignany")
+                .then(Commands.argument("player", EntityArgument.player())
+                    .then(Commands.argument("taskId", StringArgumentType.string())
+                        .executes(TaskCommands::assignAnyTask))))
+            .then(Commands.literal("complete")
+                .then(Commands.argument("player", EntityArgument.player())
+                    .then(Commands.argument("taskId", StringArgumentType.string())
+                        .executes(TaskCommands::completeTask))))
+            .then(Commands.literal("list")
+                .then(Commands.argument("player", EntityArgument.player())
+                    .executes(TaskCommands::listTasks)))
+            .then(Commands.literal("reputation")
+                .then(Commands.argument("player", EntityArgument.player())
+                    .then(Commands.argument("deity", StringArgumentType.string())
+                        .executes(TaskCommands::checkSpecificReputation))))
+            .then(Commands.literal("repall")
+                .then(Commands.argument("player", EntityArgument.player())
+                    .executes(TaskCommands::checkAllReputation)))
+            .then(Commands.literal("ritual")
+                .then(Commands.argument("player", EntityArgument.player())
+                    .then(Commands.argument("ritualId", StringArgumentType.string())
+                        .executes(TaskCommands::markRitualComplete))))
+        );
     }
     
     private static int assignTask(CommandContext<CommandSourceStack> context) {
         try {
             ServerPlayer targetPlayer = EntityArgument.getPlayer(context, "player");
-            String taskId = StringArgumentType.getString(context, "task_id");
+            String taskId = StringArgumentType.getString(context, "taskId");
             String deityIdStr = StringArgumentType.getString(context, "deity");
             ResourceLocation deityId = new ResourceLocation(deityIdStr);
             
@@ -70,7 +76,7 @@ public class TaskCommands {
                 return 0;
             }
             
-            // Find task template
+            // Find the task template
             TaskSystemConfig.TaskTemplate taskTemplate = null;
             for (TaskSystemConfig.TaskTemplate template : config.taskConfig.availableTasks) {
                 if (template.taskId.equals(taskId)) {
@@ -92,10 +98,10 @@ public class TaskCommands {
             }
             
             // Assign the task
-            PlayerContextTracker.assignTask(targetPlayer, taskId, taskTemplate.description, deityId, taskTemplate.favorReward);
+            PlayerContextTracker.assignTask(targetPlayer, taskId, taskTemplate.description, deityId, taskTemplate.reputationReward);
             
             targetPlayer.sendSystemMessage(Component.literal("§6[Divine Task] §e" + taskTemplate.description));
-            targetPlayer.sendSystemMessage(Component.literal("§7Reward: §6" + taskTemplate.favorReward + " favor points"));
+            targetPlayer.sendSystemMessage(Component.literal("§7Reward: §6" + taskTemplate.reputationReward + " reputation points"));
             
             context.getSource().sendSuccess(() -> Component.literal("Assigned task '" + taskId + "' to " + targetPlayer.getName().getString()), true);
             
@@ -106,12 +112,12 @@ public class TaskCommands {
         }
     }
     
-    private static int assignTaskSimple(CommandContext<CommandSourceStack> context) {
+    private static int assignAnyTask(CommandContext<CommandSourceStack> context) {
         try {
             ServerPlayer targetPlayer = EntityArgument.getPlayer(context, "player");
-            String taskId = StringArgumentType.getString(context, "task_id");
+            String taskId = StringArgumentType.getString(context, "taskId");
             
-            // Try to find the task in any deity config (for AI command usage)
+            // Search all deities for this task
             TaskSystemConfig.TaskTemplate taskTemplate = null;
             ResourceLocation foundDeityId = null;
             
@@ -123,7 +129,6 @@ public class TaskCommands {
                         break;
                     }
                 }
-                if (taskTemplate != null) break;
             }
             
             if (taskTemplate == null) {
@@ -132,10 +137,10 @@ public class TaskCommands {
             }
             
             // Assign the task
-            PlayerContextTracker.assignTask(targetPlayer, taskId, taskTemplate.description, foundDeityId, taskTemplate.favorReward);
+            PlayerContextTracker.assignTask(targetPlayer, taskId, taskTemplate.description, foundDeityId, taskTemplate.reputationReward);
             
             targetPlayer.sendSystemMessage(Component.literal("§6[Divine Task] §e" + taskTemplate.description));
-            targetPlayer.sendSystemMessage(Component.literal("§7Reward: §6" + taskTemplate.favorReward + " favor points"));
+            targetPlayer.sendSystemMessage(Component.literal("§7Reward: §6" + taskTemplate.reputationReward + " reputation points"));
             
             return 1;
         } catch (Exception e) {
@@ -146,46 +151,39 @@ public class TaskCommands {
     
     private static int completeTask(CommandContext<CommandSourceStack> context) {
         try {
-            if (!(context.getSource().getEntity() instanceof ServerPlayer player)) {
-                context.getSource().sendFailure(Component.literal("Only players can complete tasks"));
-                return 0;
-            }
-            
-            String taskId = StringArgumentType.getString(context, "task_id");
+            ServerPlayer player = EntityArgument.getPlayer(context, "player");
+            String taskId = StringArgumentType.getString(context, "taskId");
             
             PlayerContextTracker.EnhancedPlayerContext playerContext = PlayerContextTracker.getContext(player.getUUID());
             if (playerContext == null || !playerContext.activeTasks.containsKey(taskId)) {
-                context.getSource().sendFailure(Component.literal("You don't have that task active"));
+                context.getSource().sendFailure(Component.literal("Player does not have this task active"));
                 return 0;
             }
             
+            // Validate task requirements
             PlayerContextTracker.PlayerTask task = playerContext.activeTasks.get(taskId);
-            
-            // Check requirements if any
             boolean canComplete = true;
             for (String requirement : getTaskRequirements(taskId)) {
-                if (!checkTaskRequirement(player, requirement)) {
-                    canComplete = false;
+                if (!validateRequirement(player, requirement)) {
                     context.getSource().sendFailure(Component.literal("Requirement not met: " + requirement));
+                    canComplete = false;
                     break;
                 }
             }
             
             if (canComplete) {
-                if (PlayerContextTracker.completeTask(player, taskId)) {
-                    player.sendSystemMessage(Component.literal("§a[Task Complete] §e" + task.description));
-                    player.sendSystemMessage(Component.literal("§7Gained §6" + task.favorReward + " favor points§7!"));
-                    
-                    // Execute reward commands
-                    executeTaskRewards(player, taskId);
-                    
-                    return 1;
-                } else {
-                    context.getSource().sendFailure(Component.literal("Failed to complete task"));
-                }
+                PlayerContextTracker.completeTask(player, taskId);
+                player.sendSystemMessage(Component.literal("§7Gained §6" + task.reputationReward + " reputation points§7!"));
+                
+                // Execute task rewards
+                executeTaskRewards(player, taskId);
+                
+                return 1;
+            } else {
+                context.getSource().sendFailure(Component.literal("Task requirements not met"));
+                return 0;
             }
             
-            return 0;
         } catch (Exception e) {
             context.getSource().sendFailure(Component.literal("Error completing task: " + e.getMessage()));
             return 0;
@@ -194,22 +192,18 @@ public class TaskCommands {
     
     private static int listTasks(CommandContext<CommandSourceStack> context) {
         try {
-            if (!(context.getSource().getEntity() instanceof ServerPlayer player)) {
-                context.getSource().sendFailure(Component.literal("Only players can list tasks"));
-                return 0;
-            }
+            ServerPlayer player = EntityArgument.getPlayer(context, "player");
+            PlayerContextTracker.EnhancedPlayerContext playerContext = PlayerContextTracker.getContext(player.getUUID());
             
-            PlayerContextTracker.EnhancedPlayerContext playerContext = PlayerContextTracker.getOrCreateContext(player.getUUID(), player);
-            
-            if (playerContext.activeTasks.isEmpty()) {
-                player.sendSystemMessage(Component.literal("§7You have no active tasks"));
+            if (playerContext == null || playerContext.activeTasks.isEmpty()) {
+                player.sendSystemMessage(Component.literal("§6No active tasks"));
                 return 1;
             }
             
             player.sendSystemMessage(Component.literal("§6=== Active Divine Tasks ==="));
             for (PlayerContextTracker.PlayerTask task : playerContext.activeTasks.values()) {
-                player.sendSystemMessage(Component.literal("§e" + task.taskId + ": §f" + task.description));
-                player.sendSystemMessage(Component.literal("  §7Reward: §6" + task.favorReward + " favor points"));
+                player.sendSystemMessage(Component.literal("§e" + task.description));
+                player.sendSystemMessage(Component.literal("  §7Reward: §6" + task.reputationReward + " reputation points"));
             }
             
             return 1;
@@ -219,54 +213,87 @@ public class TaskCommands {
         }
     }
     
-    private static int checkFavor(CommandContext<CommandSourceStack> context) {
+    private static int checkSpecificReputation(CommandContext<CommandSourceStack> context) {
         try {
-            if (!(context.getSource().getEntity() instanceof ServerPlayer player)) {
-                context.getSource().sendFailure(Component.literal("Only players can check favor"));
-                return 0;
-            }
-            
+            ServerPlayer player = EntityArgument.getPlayer(context, "player");
             String deityIdStr = StringArgumentType.getString(context, "deity");
             ResourceLocation deityId = new ResourceLocation(deityIdStr);
             
-            int favorPoints = PlayerContextTracker.getFavorPoints(player, deityId);
-            player.sendSystemMessage(Component.literal("§6Favor with " + deityIdStr + ": §e" + favorPoints + " points"));
+            com.bluelotuscoding.eidolonunchained.deity.DatapackDeity deity = 
+                com.bluelotuscoding.eidolonunchained.data.DatapackDeityManager.getDeity(deityId);
+            
+            if (deity != null) {
+                double reputation = deity.getPlayerReputation(player);
+                player.sendSystemMessage(Component.literal("§6Reputation with " + deityIdStr + ": §e" + (int)reputation + " points"));
+            } else {
+                // Try Eidolon reputation system
+                try {
+                    elucent.eidolon.capability.IReputation reputationCap = player.level().getCapability(elucent.eidolon.capability.IReputation.INSTANCE).orElse(null);
+                    if (reputationCap != null) {
+                        double reputation = reputationCap.getReputation(player, deityId);
+                        player.sendSystemMessage(Component.literal("§6Reputation with " + deityIdStr + ": §e" + (int)reputation + " points"));
+                    } else {
+                        player.sendSystemMessage(Component.literal("§cCould not access reputation data"));
+                    }
+                } catch (Exception e) {
+                    player.sendSystemMessage(Component.literal("§cUnknown deity: " + deityIdStr));
+                }
+            }
             
             return 1;
         } catch (Exception e) {
-            context.getSource().sendFailure(Component.literal("Error checking favor: " + e.getMessage()));
+            context.getSource().sendFailure(Component.literal("Error checking reputation: " + e.getMessage()));
             return 0;
         }
     }
     
-    private static int checkAllFavor(CommandContext<CommandSourceStack> context) {
+    private static int checkAllReputation(CommandContext<CommandSourceStack> context) {
         try {
-            if (!(context.getSource().getEntity() instanceof ServerPlayer player)) {
-                context.getSource().sendFailure(Component.literal("Only players can check favor"));
+            ServerPlayer player = EntityArgument.getPlayer(context, "player");
+            PlayerContextTracker.EnhancedPlayerContext playerContext = PlayerContextTracker.getContext(player.getUUID());
+            
+            if (playerContext == null) {
+                context.getSource().sendFailure(Component.literal("No player context found"));
                 return 0;
             }
             
-            PlayerContextTracker.EnhancedPlayerContext playerContext = PlayerContextTracker.getOrCreateContext(player.getUUID(), player);
+            player.sendSystemMessage(Component.literal("§6=== Divine Reputation ==="));
             
-            if (playerContext.favorPoints.isEmpty()) {
-                player.sendSystemMessage(Component.literal("§7You have no favor with any deity"));
-                return 1;
-            }
-            
-            player.sendSystemMessage(Component.literal("§6=== Divine Favor ==="));
-            for (var entry : playerContext.favorPoints.entrySet()) {
-                player.sendSystemMessage(Component.literal("§e" + entry.getKey().getPath() + ": §6" + entry.getValue() + " points"));
+            // Check datapack deities
+            for (com.bluelotuscoding.eidolonunchained.deity.DatapackDeity deity : com.bluelotuscoding.eidolonunchained.data.DatapackDeityManager.getAllDeities().values()) {
+                double reputation = deity.getPlayerReputation(player);
+                if (reputation != 0) {
+                    player.sendSystemMessage(Component.literal("§e" + deity.getId().getPath() + ": §6" + (int)reputation + " points"));
+                }
             }
             
             return 1;
         } catch (Exception e) {
-            context.getSource().sendFailure(Component.literal("Error checking favor: " + e.getMessage()));
+            context.getSource().sendFailure(Component.literal("Error checking reputation: " + e.getMessage()));
             return 0;
         }
     }
     
-    private static java.util.List<String> getTaskRequirements(String taskId) {
-        // Find task requirements from configs
+    private static int markRitualComplete(CommandContext<CommandSourceStack> context) {
+        try {
+            ServerPlayer targetPlayer = EntityArgument.getPlayer(context, "player");
+            String ritualIdString = StringArgumentType.getString(context, "ritualId");
+            
+            ResourceLocation ritualId = new ResourceLocation(ritualIdString);
+            
+            // Fire our custom ritual completion event
+            com.bluelotuscoding.eidolonunchained.events.RitualEventHandler.fireRitualCompletion(targetPlayer, ritualId);
+            
+            context.getSource().sendSuccess(() -> Component.literal("Marked ritual '" + ritualIdString + "' as completed for " + targetPlayer.getName().getString()), true);
+            return 1;
+        } catch (Exception e) {
+            context.getSource().sendFailure(Component.literal("Error marking ritual complete: " + e.getMessage()));
+            return 0;
+        }
+    }
+    
+    // Helper methods
+    private static List<String> getTaskRequirements(String taskId) {
         for (AIDeityConfig config : AIDeityManager.getInstance().getAllConfigs()) {
             for (TaskSystemConfig.TaskTemplate template : config.taskConfig.availableTasks) {
                 if (template.taskId.equals(taskId)) {
@@ -274,37 +301,43 @@ public class TaskCommands {
                 }
             }
         }
-        return java.util.Collections.emptyList();
+        return List.of();
     }
     
-    private static boolean checkTaskRequirement(ServerPlayer player, String requirement) {
-        if (requirement.startsWith("item:")) {
-            // Format: "item:namespace:item_id:count"
-            String[] parts = requirement.split(":");
-            if (parts.length >= 4) {
-                try {
-                    ResourceLocation itemId = new ResourceLocation(parts[1], parts[2]);
-                    int requiredCount = Integer.parseInt(parts[3]);
-                    
-                    int playerCount = 0;
-                    for (int i = 0; i < player.getInventory().getContainerSize(); i++) {
-                        var stack = player.getInventory().getItem(i);
-                        if (!stack.isEmpty() && net.minecraftforge.registries.ForgeRegistries.ITEMS.getKey(stack.getItem()).equals(itemId)) {
-                            playerCount += stack.getCount();
-                        }
+    private static boolean validateRequirement(ServerPlayer player, String requirement) {
+        String[] parts = requirement.split(":");
+        if (parts.length >= 2) {
+            String type = parts[0];
+            
+            if (type.equals("item") && parts.length >= 4) {
+                // Item count requirement: "item:minecraft:wheat:16"
+                String itemName = parts[1] + ":" + parts[2];
+                int requiredCount = Integer.parseInt(parts[3]);
+                
+                int playerCount = 0;
+                for (int i = 0; i < player.getInventory().getContainerSize(); i++) {
+                    net.minecraft.world.item.ItemStack stack = player.getInventory().getItem(i);
+                    if (net.minecraftforge.registries.ForgeRegistries.ITEMS.getKey(stack.getItem()).toString().equals(itemName)) {
+                        playerCount += stack.getCount();
                     }
-                    
-                    return playerCount >= requiredCount;
-                } catch (Exception e) {
-                    return false;
+                }
+                
+                return playerCount >= requiredCount;
+            } else if (type.equals("ritual") && parts.length >= 3) {
+                // Ritual requirement: "ritual:eidolonunchained:nature_blessing"
+                ResourceLocation ritualId = new ResourceLocation(parts[1] + ":" + parts[2]);
+                PlayerContextTracker.EnhancedPlayerContext context = PlayerContextTracker.getContext(player.getUUID());
+                
+                if (context != null) {
+                    return context.completedRituals.contains(ritualId.toString());
                 }
             }
         }
-        return true; // Default to true for unknown requirements
+        
+        return false;
     }
     
     private static void executeTaskRewards(ServerPlayer player, String taskId) {
-        // Find and execute reward commands
         for (AIDeityConfig config : AIDeityManager.getInstance().getAllConfigs()) {
             for (TaskSystemConfig.TaskTemplate template : config.taskConfig.availableTasks) {
                 if (template.taskId.equals(taskId)) {
@@ -312,9 +345,11 @@ public class TaskCommands {
                         String processedCommand = command.replace("{player}", player.getName().getString());
                         try {
                             player.getServer().getCommands().performPrefixedCommand(
-                                player.getServer().createCommandSourceStack(), processedCommand);
+                                player.getServer().createCommandSourceStack(),
+                                processedCommand
+                            );
                         } catch (Exception e) {
-                            com.mojang.logging.LogUtils.getLogger().warn("Failed to execute reward command: " + processedCommand, e);
+                            System.err.println("Failed to execute reward command: " + processedCommand + " - " + e.getMessage());
                         }
                     }
                     break;
